2004-06-17 Tanya Wolff
	Fix for PR 60616: [Accessibility] 
	Removed mnemonics for reusable code Browse & Variables buttons, 
	fixed other duplicate mnemonices in New Class wizard.
	*org.eclipse.cdt.ui.wizards/NewWizardMessages.properties
	
2004-06-18 Bogdan Gheorghe
	Part 2 of Fix for Bug 62668: [Search] Search results rely on case of file names in include statement
	rather then the filesystem
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	
2004-06-18 Bogdan Gheorghe
	Partial Fix for Bug 62668: [Search] Search results rely on case of file names in include statement
	rather then the filesystem
	
	* src/org/eclipse/cdt/internal/ui/util/EditorUtility.java
	
2004-06-17 Hoda Amer
	Fix for PR 63933: [Refactoring] compilation errors does not prevent rename refactoring
	Fix for PR 64213: [Refactoring] No warning given when renaming class A to B when B already exists
	
2004-06-16 Hoda Amer 
	Fix for PR 66730: [Refactoring] Renaming a class does not change .cpp file.
	Fix for PR 61045: [Accessibility] Code Templates Preview box has no MSAA name
	
2004-06-15 Bogdan Gheorghe
	Fix for Bug 60490:  "Selected resource" option should only be enabled/disabled 
	based on selections in the Navigator and C/C++ Projects views - search now
	works on all C/C++ views
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchScopeFactory.java
	* src/org/eclipse/cdt/internal/ui/search/NewSearchResultCollector.java
		
2004-06-15 Bogdan Gheorghe
	Fix for Bug 63957: Error with external search markers - changed label
	provider to provide proper paths for external links
	
2004-06-15 Bogdan Gheorghe
	Disable background type cache on startup for now
	
	* src/org/eclipse/cdt/internal/ui/preferences/WorkInProgressPreferencePage.java
	
2004-06-14 Bogdan Gheorghe
	Fix for Bug 66748: Fixed in head - we now add a _cdtsrchlink_ label to all 
	imports brought in by search and ensure that we don't delete any local files.
	
2004-06-11 Bogdan Gheorghe