@@ -62,7 +62,7 @@ public class FindDeclarationsInWorkingSetAction extends FindAction {
 	 * @see org.eclipse.cdt.internal.ui.editor.selsearch.FindAction#getScopeDescription()
 	 */
 	protected String getScopeDescription() {
-		return CSearchMessages.getString("WorkingSetScope"); //$NON-NLS-1$
+		return CSearchMessages.getFormattedString("WorkingSetScope", CSearchUtil.toString(fWorkingSet)); //$NON-NLS-1$
 	}
 	/* (non-Javadoc)
 	 * @see org.eclipse.cdt.internal.ui.editor.selsearch.FindAction#getScope()
@@ -74,6 +74,7 @@ public class FindDeclarationsInWorkingSetAction extends FindAction {
 			workingSets= CSearchScopeFactory.getInstance().queryWorkingSets();
 			if (workingSets == null)
 				return null;
+			fWorkingSet = workingSets;
 		}
 		ICSearchScope scope= CSearchScopeFactory.getInstance().createCSearchScope(workingSets);
 		CSearchUtil.updateLRUWorkingSets(workingSets);
